# number-interpreter

./: .clang-format  .clang-tidy  .gitmodules  CMakeLists.txt  Makefile  README.md  main.cpp
.github/workflows/: build-and-test.yml  format-check.yml  static-analysis.yml
benchmarks/: CMakeLists.txt
benchmarks/benchmarks/: context.cpp  interpret.cpp  nonterminal_expressions.cpp  number_parts.cpp  token.cpp
docs/: grammar.md
number-interpreter/: CMakeLists.txt
number-interpreter/include/: constant.hpp  context.hpp  digits.hpp  exponent.hpp  expression.hpp  float.hpp  interpreter.hpp  logical.hpp  sign.hpp  signed_integer.hpp
number-interpreter/source/: constant.cpp  context.cpp  digits.cpp  exponent.cpp  float.cpp  interpreter.cpp  logical.cpp  sign.cpp  signed_integer.cpp
number_interpreter/: CMakeLists.txt
number_interpreter/include/: abstract_expression.hpp  contants.hpp  context.hpp  exceptions.hpp  interpreter.hpp  number_parts.hpp  terminal_expression.hpp
number_interpreter/include/nonterminal_expressions/: decimal.hpp  digit.hpp  exponent.hpp  exponent_part.hpp  extended_decimal.hpp  fractional_part.hpp  signed_integer.hpp  special.hpp  unsigned_integer.hpp
number_interpreter/include/terminal_expressions/: dot.hpp  exp.hpp  infinity.hpp  non_zero_digit.hpp  not_a_number.hpp  sign.hpp  zero.hpp
number_interpreter/source/: abstract_expression.cpp  constants.cpp  context.cpp  number_parts.cpp  token.cpp
number_interpreter/source/expressions/: abstract_expression.hpp  nonterminal_expression.hpp  terminal_expression.hpp
number_interpreter/source/nonterminal_expressions/: decimal.cpp  digit.cpp  exponent_part.cpp  extended_decimal.cpp  fractional_part.cpp  signed_integer.cpp  special.cpp  unsigned_integer.cpp
number_interpreter/source/terminal_expressions/: dot.cpp  exp.cpp  infinity.cpp  non_zero_digit.cpp  not_a_number.cpp  sign.cpp  terminal_expression.cpp  zero.cpp
tests/: CMakeLists.txt
tests/tests/: context.cpp  exponent.cpp  interpreter.cpp  main.cpp  number_parts.cpp  sign.cpp  signed_integer.cpp  token.cpp  tools.cpp  tools.hpp
tests/tests/nonterminal_expressions/: decimal.cpp  digit.cpp  exponent.cpp  extended_decimal.cpp  fractional_part.cpp  signed_integer.cpp  special.cpp  unsigned_integer.cpp
tests/tests/terminal_expressions/: dot.cpp  exp.cpp  infinity.cpp  non_zero_digit.cpp  not_a_number.cpp  sign.cpp  zero.cpp
